[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-server-favicon"
description = "A Jupyter Server extension that adds a favicon to your Jupyter Server instance, making it easier to identify in browser tabs"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
    { name = "Enverge Labs", email = "tudor@enverge.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jinja2",
    "jupyter_server",
]
version = "0.0.1"
urls = { Homepage = "https://github.com/Enverge-Labs/jupyter-server-favicon" }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
jupyter-server-favicon = "jupyter_server_favicon.application:main"

[tool.hatch.build.targets.wheel.shared-data]
"etc/jupyter/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_server_favicon"]
